[package]
name = "MurkMap"
version = "0.1.0"
edition = "2021"

[dependencies]
bedrockrs = { git = "https://github.com/akashic-records-of-the-abyss/bedrockrs.git", features = ["full"] , branch = "level_crate_rework"}
image = "0.25.5"
csv = "1.3.1"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }