[package]
name = "MurkMap"
version = "0.1.0"
edition = "2021"

[dependencies]
bedrockrs = { git = "https://github.com/akashic-records-of-the-abyss/bedrockrs.git", features = ["full"] , branch = "level_crate_rework"}
flate2 = "1.0.35"
bincode = "1.3.3"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }